core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@malformed_include.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Failed to parse diplomat::include
In src/ast/snapshots/span_testing/malformed_include.rs:2:21:
...lude(abc123)]
mo...
        ^^^^^^
expected string literal
